# sparse_accumulation

./: .gitignore  README.md  README.rst  abstract.html  benchmark_contiguous.ipynb  benchmark_contiguous.py  benchmark_contiguous_tmp.py  benchmark_real_data.py  benchmarks.html  clebsch_gordan.py  cpu_benchmark.ipynb  cpu_benchmark_contiguous.ipynb  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  random-methane-10k.extxyz  reference_guide.html  search.html  searchindex.js  setup.py  sparse_accumulation.cpp  sparse_accumulation.py  sparse_accumulation_active_dim_first.cpp  sparse_accumulation_active_dim_first.py  sparse_accumulation_active_dim_middle.cpp  sparse_accumulation_cpu.py  sparse_accumulation_cuda.cpp  sparse_accumulation_plain_torch.py  test_cpp.py  test_cpp_contiguous.py  test_cpp_jit_cuda.py  test_forward.py  tests.html  tutorial.html  update_docs.py  usage_in_python.html  usage_in_python.ipynb
_sources/: benchmarks.rst.txt  index.rst.txt  installation.rst.txt  reference_guide.rst.txt  tests.rst.txt  tutorial.ipynb.txt  tutorial.rst.txt
benchmarks/: benchmark_contiguous.out  benchmark_contiguous_cpu.out  benchmark_contiguous_cpu.py  benchmark_contiguous_gpu.out  benchmark_contiguous_gpu.py
ci/: pipeline.yml
cpu_kernel/: __init__.py  sparse_accumulation.cpp  sparse_accumulation.py  sparse_accumulation_active_dim_first.cpp  sparse_accumulation_active_dim_middle.py
cuda/: jit.py  setup.py  sparse_accumulation_cuda.cpp  sparse_accumulation_cuda_kernel.cu  sparse_accumulation_cuda_kernel2D.cu
cuda_thread_memory_buffers/: jit.py  (+1 more)
(+30 files in other folders)
